--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Scripts for scraping the Heavens Above website.",
   "main": "run.js",
   "scripts": {
-    "start": "node run.js"
+    "start": "node run.js",
+        "test": "jest"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
