--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,15 +45,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install AWS CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
+      - name: Install Vercel CLI
+        run: npm install -g vercel
 
-      - name: Configure AWS credentials
-        run: aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID && aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY && aws configure set default.region $AWS_REGION
+      - name: Login to Vercel
+        run: vercel login --email $VERCEL_EMAIL --token $VERCEL_TOKEN
 
-      - name: Deploy to AWS Elastic Beanstalk
-        run: |
-          aws elasticbeanstalk create-application-version --application-name "your-application-name" --version-label "main-$(date +'%Y%m%d%H%M%S')" --source-bundle S3Bucket=your-bucket-name,S3Key=your-zip-file
-          aws elasticbeanstalk update-environment --application-name "your-application-name" --environment-name "your-environment-name" --version-label "main-$(date +'%Y%m%d%H%M%S')"
+      - name: Deploy to Vercel
+        run: vercel --prod
