--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-  deploy:
+   deploy:
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -48,8 +48,10 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
-      - name: Login to Vercel
-        run: vercel login --email $VERCEL_EMAIL --token $VERCEL_TOKEN
+      - name: Set Vercel token
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: echo "//registry.npmjs.org/:_authToken=${VERCEL_TOKEN}" > ~/.npmrc
 
-      - name: Deploy to Vercel
-        run: vercel --prod
+      - name: Login to Vercel
+        run: vercel login --email $VERCEL_EMAIL
