--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,4 +54,4 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${VERCEL_TOKEN}" > ~/.npmrc
 
       - name: Login to Vercel
-        run: vercel login --email $VERCEL_EMAIL
+        run: vercel login 
